fix modal scrollbar

--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -169,6 +169,7 @@ main {
   width: 100%;
   overflow: auto;
   background-color: rgba(26, 39, 156, 0.4);
+  overflow: hidden;
 }
 .bground.active {
   display: block;
